--- a/assets/css/mystylesheet.css
+++ b/assets/css/mystylesheet.css
@@ -4,7 +4,7 @@
 }
 
 :root {
-    --primary-color: #113d6b;
+    --primary-color: #116b3e;
 }
 
 a {
@@ -83,7 +83,7 @@ header {
     padding: 8px 0 !important;
     margin-bottom: 0 !important;
     border-bottom: 2px solid #3c7fc630;
-    background-color: rgb(230, 33, 33);
+    background-color: rgb(33, 230, 108);
 }
 
 .top-header p {
@@ -136,11 +136,11 @@ header {
 
 .btn-outline-success:active {
     color: #fff !important;
-    background-color: #3c7fc6 !important;
+    background-color: #3cc681 !important;
 }
 
 .bg-image-1 {
-    background: url("../images/images/img-hero-bg.png");
+    background: url("../images/images/bgx.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -182,7 +182,7 @@ header {
 }
 
 .main-heading {
-    color: #091f36;
+    color: #096811;
     font-weight: 700;
     font-size: 40px;
     margin-bottom: 30px;
@@ -203,7 +203,7 @@ header {
 
 .card-body h5 {
     font-weight: 600;
-    color: #091f36;
+    color: #096811;
 }
 
 .feature-section {
@@ -392,7 +392,7 @@ header {
 }
 
 .user-details h5 {
-    color: #113d6b;
+    color: #096811;
     font-weight: 600;
     font-size: 16px;
 }
@@ -407,7 +407,7 @@ header {
 }
 
 .app-download {
-    background-color: #ff0000;
+    background-color: #000;
     padding: 30px;
 }
 
@@ -428,7 +428,7 @@ header {
 }
 
 .accordion-button {
-    color: #113d6b !important;
+    color: #096811 !important;
     font-weight: 600 !important;
     border-radius: 10px !important;
 }
@@ -439,7 +439,7 @@ header {
 }
 
 .accordion-button:not(.collapsed) {
-    background-color: #113d6b !important;
+    background-color: #096811 !important;
     color: #fff !important;
     box-shadow: none !important;
     font-weight: 500 !important;
@@ -455,7 +455,7 @@ header {
 
 .contact-heading h3 {
     font-weight: 600;
-    color: #113d6b;
+    color: #096811;
 }
 
 .contact-icon img {
@@ -463,7 +463,7 @@ header {
 }
 
 .contact-details h4 {
-    color: #113d6b;
+    color: #096811;
     font-weight: 600;
 }
 
@@ -483,7 +483,7 @@ header {
 }
 
 .contact-footer h4 {
-    color: #091f36;
+    color: #096811;
     font-weight: 600;
     margin-bottom: 20px;
 }
@@ -497,7 +497,7 @@ header {
 }
 
 #xfooter {
-    background-color: #091f36 !important;
+    background-color: #096811 !important;
     color: #fff;
     padding: 20px;
     margin-block: 0 !important;
