--- a/assets/css/mystylesheet.css
+++ b/assets/css/mystylesheet.css
@@ -110,13 +110,24 @@ header {
 .btn-outline-success {
     color: var(--primary-color) !important;
     border-color: var(--primary-color) !important;
-    padding: 10px !important;
-    font-size: 11px !important;
+    /* padding: 10px !important; */
+    font-size: 14px !important;
+}
+.btn-outline-danger {
+    color: rgb(239, 72, 72) !important;
+    border-color: rgb(239, 72, 72) !important;
+    /* padding: 10px !important; */
+    font-size: 14px !important;
 }
 
 .btn-outline-success:hover {
     color: var(--primary-color) !important;
     background-color: #e0f6fe !important;
+}
+
+.btn-outline-danger:hover {
+    color: rgb(239, 72, 72) !important;
+    background-color: rgb(246, 199, 199) !important;
 }
 
 .navbar-light .navbar-nav .nav-link.active {
@@ -137,6 +148,11 @@ header {
 .btn-outline-success:active {
     color: #fff !important;
     background-color: #3cc681 !important;
+}
+
+.btn-outline-danger:active {
+    color: #fff !important;
+    background-color: rgb(239, 72, 72) !important;
 }
 
 .bg-image-1 {
@@ -576,6 +592,9 @@ header {
     .btn-outline-success {
         margin-bottom: 10px;
     }
+    .btn-outline-danger {
+        margin-bottom: 10px;
+    }
 
     /* .card-custom {
         height: 550px !important;
@@ -748,4 +767,19 @@ header {
         height: 336px;
         margin-left: 0;
     }
+}
+
+.cta-btn{
+    max-height: 3rem;
+    padding-inline: 0.3rem;
+    text-align: center;
+}
+
+@media (min-width: 756px){
+    .cta-btn{
+        max-height: 3rem;
+        padding-inline: 6rem;
+        text-align: center;
+    }
+
 }
